<resources>
    <string name="app_name">EfficientStock</string>
    <string name="enter_email">enter email</string>
    <string name="username_label">username label</string>
    <string name="enter_password">enter password</string>
    <string name="email_username">Email (Username)</string>
    <string name="login_button">login button</string>
    <string name="login_register">Login / Register</string>
    <string name="password">Password</string>
    <string name="user_somecompany_com">user@somecompany.com</string>
    <string name="logo">Logo</string>
    <string name="inventory_list">Inventory List</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="item_name">Item Name</string>
    <string name="actions">Actions</string>
    <string name="add_item">Add Item</string>
    <string name="update_icon">update icon</string>
    <string name="alert_icon">alert icon</string>
    <string name="set_quantity_low_notification">set quantity low notification</string>
    <string name="quantity_low">Quantity Low</string>
    <string name="set_item_deleted_notification">set item deleted notification</string>
    <string name="item_deleted">Item Deleted</string>
    <string name="set_notifications_for">Set notifications for:</string>
    <string name="inventory_detail">Inventory Detail</string>
    <string name="item_description">Item Description</string>
    <string name="enter_item_name">enter item name</string>
    <string name="enter_description">enter description</string>
    <string name="qty_in_stock">Qty In-stock</string>
    <string name="warehouse_location">Warehouse Location</string>
    <string name="enter_warehouse_location">enter warehouse location</string>
    <string name="enter_quantity_in_stock">enter quantity in stock</string>
    <string name="add_update_item">Add/Update Item</string>
    <string name="remove_item">Remove Item</string>
</resources>