<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/lbl_title"
        android:layout_width="223dp"
        android:layout_height="37dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="27dp"
        android:contentDescription="@string/inventory_detail"
        android:fontFamily="sans-serif-black"
        android:text="@string/inventory_detail"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/img_logo"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/lbl_descr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        android:text="@string/item_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <TextView
        android:id="@+id/lbl_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/item_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="313dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_item_name"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_name"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextDescr"
        android:layout_width="313dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="1dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_description"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_descr"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/lbl_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="25dp"
        android:text="@string/qty_in_stock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescr" />

    <TextView
        android:id="@+id/lbl_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="31dp"
        android:text="@string/warehouse_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextQty" />

    <EditText
        android:id="@+id/editTextLocation"
        android:layout_width="320dp"
        android:layout_height="42dp"
        android:layout_marginStart="13dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_warehouse_location"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_location"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextQty"
        android:layout_width="313dp"
        android:layout_height="46dp"
        android:layout_marginStart="14dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_quantity_in_stock"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_qty"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_update_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLocation" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="152dp"
        android:layout_height="47dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="20dp"
        android:text="@string/remove_item"
        app:layout_constraintStart_toEndOf="@+id/btn_update"
        app:layout_constraintTop_toBottomOf="@+id/editTextLocation"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>