<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lbl_title"
        android:layout_width="297dp"
        android:layout_height="23dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/inventory_list"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_location"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="280dp"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lbl_qty" />

    <TextView
        android:id="@+id/lbl_descr"
        android:layout_width="125dp"
        android:layout_height="20dp"
        android:layout_marginStart="85dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lbl_name" />

    <TextView
        android:id="@+id/lbl_qty"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="215dp"
        android:text="@string/quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lbl_descr" />

    <TextView
        android:id="@+id/lbl_name"
        android:layout_width="75dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="68dp"
        android:text="@string/item_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_action"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="2dp"
        android:text="@string/actions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider1"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="66dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="89dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="408dp"
        android:layout_height="56dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="3dp"
        android:text="@string/add_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <ImageButton
        android:id="@+id/btn_update"
        android:layout_width="28dp"
        android:layout_height="24dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="34dp"
        android:contentDescription="@string/update_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btn_alert"
        android:layout_width="28dp"
        android:layout_height="24dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="6dp"
        android:contentDescription="@string/alert_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_alert"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>